# CacheCore

./: .gitignore  CMakeLists.txt  README.md
include/cache/: EvictionPolicy.h  LRUCache.h
include/database/: Database.h  Entry.h
include/executor/: CommandExecutor.h
include/parser/: Command.h  CommandParser.h  RespParser.h
include/persistence/: Serializer.h
include/server/: ClientHandler.h  Server.h
include/socket/: Socket.h
include/ttl/: TTLManager.h
server/: main.cpp
src/cache/: LRUCache.cpp
src/database/: Database.cpp
src/executor/: CommandExecutor.cpp
src/parser/: CommandParser.cpp  RespParser.cpp
src/persistence/: Serializer.cpp
src/server/: ClientHandler.cpp  Server.cpp
src/socket/: Socket.cpp
src/ttl/: TTLManager.cpp
